# typewhisper-mac

./: .gitignore  ExportOptions.plist  PLAN.md  README.md  ROADMAP.md  bazcord.plugin.js  bazcordstereopro.plugin.js
.github/workflows/: appstore.yml  build.yml  release.yml
Plugins/: README.md
Plugins/GeminiPlugin/: GeminiPlugin.swift  manifest.json
Plugins/GroqPlugin/: GroqPlugin.swift  manifest.json
Plugins/LinearPlugin/: LinearPlugin.swift  manifest.json
Plugins/OpenAIPlugin/: OpenAIPlugin.swift  manifest.json
Plugins/WebhookPlugin/: WebhookPlugin.swift  manifest.json
TypeWhisper.xcodeproj/: project.pbxproj
TypeWhisper/App/: ServiceContainer.swift  TypeWhisperApp.swift  UserDefaultsKeys.swift  main.swift
TypeWhisper/Models/: CloudModelInfo.swift  DictionaryEntry.swift  EngineType.swift  ModelInfo.swift  Profile.swift  PromptAction.swift  Snippet.swift  TermPack.swift  TranscriptionRecord.swift  TranscriptionResult.swift
TypeWhisper/Resources/: Info.plist  Localizable.xcstrings
TypeWhisper/Services/: AudioDeviceService.swift  AudioFileService.swift  AudioRecordingService.swift  DictionaryService.swift  EventBus.swift  HistoryExporter.swift  HistoryService.swift  HostServicesImpl.swift  HotkeyService.swift  MediaPlaybackService.swift  ModelManagerService.swift  PluginManager.swift  PostProcessingPipeline.swift  ProfileService.swift  PromptActionService.swift  PromptProcessingService.swift  (+5 more)
TypeWhisperPluginSDK/: Package.swift
eq_ui/: CMakeLists.txt  README.md
eq_ui/src/: GraphicalParametricEQ.hpp  main.cpp
scripts/: take-screenshots.sh
(+54 files in other folders)
